Updated AbstractDao